@@ -157,6 +157,7 @@ presets["Full PyMods"] = {
         {type="item",       name="tuuphra",        quantity=1},
         {type="item",       name="yaedols",        quantity=1},
         {type="item",       name="arqad",          quantity=1},
+        {type="item",       name="arqad-queen",    quantity=1},
         {type="item",       name="korlex",         quantity=1},
         {type="item",       name="sea-sponge",     quantity=1},
         {type="item",       name="xyhiphoe",       quantity=1},
@@ -170,6 +171,7 @@ presets["Full PyMods"] = {
         {type="item",       name="navens",         quantity=1},
         {type="item",       name="thikat",         quantity=1},
         {type="item",       name="bhoddos",        quantity=1},
+        {type="item",       name="guar",           quantity=1},
         {type="item",       name="phagnot",        quantity=1},
         {type="item",       name="arthurian",      quantity=1},
         {type="item",       name="cridren",        quantity=1},
@@ -201,7 +203,7 @@ presets["Full PyMods"] = {
         {type="item",       name="ocula",                         quantity=1},
         {type="item",       name="crawdad",                       quantity=1},
         {type="item",       name="dingrido",                      quantity=1},
-        {type="item",       name="qaavi",                         quantity=1},
+        {type="item",       name="phadaisus",                     quantity=1},
         {type="item",       name="spidertron",                    quantity=1},
         {type="technology", name="pyrrhic",                       quantity=1},
 
@@ -335,6 +337,7 @@ presets["Full PyMods (minus Alternative Energy)"] = {
         {type="item",       name="tuuphra",        quantity=1},
         {type="item",       name="yaedols",        quantity=1},
         {type="item",       name="arqad",          quantity=1},
+        {type="item",       name="arqad-queen",    quantity=1},
         {type="item",       name="korlex",         quantity=1},
         {type="item",       name="sea-sponge",     quantity=1},
         {type="item",       name="xyhiphoe",       quantity=1},
@@ -348,6 +351,7 @@ presets["Full PyMods (minus Alternative Energy)"] = {
         {type="item",       name="navens",         quantity=1},
         {type="item",       name="thikat",         quantity=1},
         {type="item",       name="bhoddos",        quantity=1},
+        {type="item",       name="guar",           quantity=1},
         {type="item",       name="phagnot",        quantity=1},
         {type="item",       name="arthurian",      quantity=1},
         {type="item",       name="cridren",        quantity=1},
@@ -375,7 +379,7 @@ presets["Full PyMods (minus Alternative Energy)"] = {
         {type="item",       name="ocula",                         quantity=1},
         {type="item",       name="crawdad",                       quantity=1},
         {type="item",       name="dingrido",                      quantity=1},
-        {type="item",       name="qaavi",                         quantity=1},
+        {type="item",       name="phadaisus",                     quantity=1},
         {type="item",       name="spidertron",                    quantity=1},
         {type="technology", name="pyrrhic",                       quantity=1},
 
